<resources>
    <string name="app_name">BuscaMinEs</string>
    <string name="correoEt">E-mail</string>
    <string name="nombreEt">Nom</string>
    <string name="passEt">Contrasenya</string>
    <string name="fechaTxt">Data</string>
    <string name="Registrar">Registrar</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Contrasenya</string>
    <string name="BtnLogin">ENTRAR</string>
    <string name="TancarSessio">Tancar Sessió</string>
    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacio" translatable="false"> -- </string>
    <string name="uid" translatable="false"> -- </string>
    <string name="correo" translatable="false"> -- </string>
    <string name="nom" translatable="false"> -- </string>
    <string name="MenuTxt">Menú</string>
    <string name="jugarBtn">Jugar</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="facil">Fàcil</string>
    <string name="intermedi">Intermedi</string>
    <string name="dificil">Difícil</string>
    <string name="extrema">Extrema</string>
    <string name="time">Temps: %02d:%02d</string>
    <string name="mines_left">Mines Restants: %d</string>
    <string name="no_account">No tinc compte</string>
    <string name="yes_account">Ja tinc compte</string>

    <string name="Credits">Crèdits</string>
    <string name="BTMLOGIN" translatable="false">Login</string>
    <string name="BTMREGISTER">Registrar-se</string>
    <string name="continuar">Continuar</string>
    <string name="Mi_perfil">Mi Perfil</string>
    <string name="back">Tornar</string>
    <string name="canviar_imatge">Canviar imatge</string>
    <string name="pass_et2"> Repetir Contrasenya</string>
    <string name="ranking">Ranking dels jugadors</string>
    <string name="miriam" translatable="false">Miriam Murà Calamardo</string>
    <string name="enric" translatable="false">Enric Sánchez Montoya</string>
    <string name="and">i</string>
    <string name="textoLogin">Inicieu la sessió</string>
    <string name="fecha_union">Data d´unió: </string>
    <string name="dialog_title">Canviar imatge</string>
    <string name="dialog_message">Seleccionar imatge de:</string>
    <string name="dialog_gallery">Galeria</string>
    <string name="dialog_camera">Càmera</string>
    <string name="error_title">Error</string>
    <string name="error_message">Les contrasenyes no coincideixen.</string>
    <string name="accept_button">Acceptar</string>
    <string name="invalid_email">Correu electrònic no vàlid</string>
    <string name="short_password">La contrasenya ha de tenir com a mínim 6 caràcters</string>


</resources>