<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

    <TextView
        android:id="@+id/enric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enric"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/and"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/and"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/miriam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/miriam"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="366dp"
        android:layout_height="414dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/autores" />


</LinearLayout>