<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">
    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/correoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correoEt"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- forcem que la entrada sigui un correu electronic -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <!-- ENTREM EL PASSWORD -->
            <EditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/passEt"
                android:textColor="@color/white"/>
            <!-- forcem que la entrada sigui un password -->
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">

            <!-- ENTREM EL NOM DEL JUGADOR -->
            <EditText
                android:id="@+id/nombreEt"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombreEt"
                android:textColorHint="@color/white"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</RelativeLayout>
